<?xml version="1.0" encoding="utf-8"?>
<com.github.nikartm.button.FitButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:fb_backgroundColor="#2E2F41"
    app:fb_cornerRadius="24dp"
    app:fb_rippleColor="#8C8888"
    app:fb_shape="rectangle"
    app:fb_textColor="#000000"
    app:fb_textSize="20dp"
    app:fb_textStyle="bold">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:background="@color/black"
            android:gravity="center"
            android:text="Stop Watch"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="250dp"
            app:cardElevation="50dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_design"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <TextView
                        android:id="@+id/textView_stopwatch_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:"
                        android:theme="@style/NumberTextViewsStyle" />


                    <TextView
                        android:id="@+id/textView_stopwatch_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:"
                        android:theme="@style/NumberTextViewsStyle" />

                    <TextView
                        android:id="@+id/textView_stopwatch_10ms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00"
                        android:theme="@style/NumberTextViewsStyle" />


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/resume_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toLeftOf="@+id/reset_card"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/button_resume_stop_watch"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/resume"
                    android:textColor="#388E3C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/stop_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/button_stop_stop_watch"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/stop"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/reset_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/stop_card"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true">

                <Button
                    android:id="@+id/button_reset_stop_watch"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/reset"
                    android:textColor="#E40404"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/start_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <Button
                android:id="@+id/button_start_stop_watch"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/start"
                android:textColor="#0266CA"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</com.github.nikartm.button.FitButton>